--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,11 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 :root {
+  --yellow: #feda84;
+  --orange: #ff9b83;
+  --light-purple: #976393;
   --purple: #685489;
+  --dark-purple: #43457f;
   
   --pink: #e83e8c;
   --red: #dc3545;
