--- a/css/styles_light_blue.css
+++ b/css/styles_light_blue.css
@@ -11,6 +11,12 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 :root {
+  --white: #fffdfa;
+  --light-blue: #b8c6d1;
+  --dark-blue: #5a7285;
+  --light-brown: #d1c7b8;
+  --dark-brown: #857967;
+
   --blue: #007bff;
   --indigo: #6610f2;
   --purple: #6f42c1;
