Update and rename styles_light-blue.css to styles_dark-blue.css

--- a/css/styles_dark-blue.css
+++ b/css/styles_dark-blue.css
@@ -31,7 +31,7 @@
   --gray: #6c757d;
   --gray-dark: #343a40;
   --primary: #bd5d38;
-  --secondary: #b8c6d1;
+  --secondary: #5a7285;
   --success: #28a745;
   --info: #17a2b8;
   --warning: #ffc107;
@@ -219,7 +219,7 @@ table {
 caption {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-  color: #b8c6d1;
+  color: #5a7285;
   text-align: left;
   caption-side: bottom;
 }
@@ -474,7 +474,7 @@ mark,
 .blockquote-footer {
   display: block;
   font-size: 80%;
-  color: #b8c6d1;
+  color: #5a7285;
 }
 .blockquote-footer::before {
   content: "— ";
@@ -505,7 +505,7 @@ mark,
 
 .figure-caption {
   font-size: 90%;
-  color: #b8c6d1;
+  color: #5a7285;
 }
 
 code {
@@ -2033,23 +2033,23 @@ pre code {
   box-shadow: 0 0 0 0.2rem rgba(189, 93, 56, 0.25);
 }
 .form-control::-webkit-input-placeholder {
-  color: #b8c6d1;
+  color: #5a7285;
   opacity: 1;
 }
 .form-control::-moz-placeholder {
-  color: #b8c6d1;
+  color: #5a7285;
   opacity: 1;
 }
 .form-control:-ms-input-placeholder {
-  color: #b8c6d1;
+  color: #5a7285;
   opacity: 1;
 }
 .form-control::-ms-input-placeholder {
-  color: #b8c6d1;
+  color: #5a7285;
   opacity: 1;
 }
 .form-control::placeholder {
-  color: #b8c6d1;
+  color: #5a7285;
   opacity: 1;
 }
 .form-control:disabled, .form-control[readonly] {
@@ -2173,7 +2173,7 @@ textarea.form-control {
   margin-left: -1.25rem;
 }
 .form-check-input[disabled] ~ .form-check-label, .form-check-input:disabled ~ .form-check-label {
-  color: #b8c6d1;
+  color: #5a7285;
 }
 
 .form-check-label {
@@ -2508,8 +2508,8 @@ fieldset:disabled a.btn {
 
 .btn-secondary {
   color: #fff;
-  background-color: #b8c6d1;
-  border-color: #b8c6d1;
+  background-color: #5a7285;
+  border-color: #5a7285;
 }
 .btn-secondary:hover {
   color: #fff;
@@ -2524,8 +2524,8 @@ fieldset:disabled a.btn {
 }
 .btn-secondary.disabled, .btn-secondary:disabled {
   color: #fff;
-  background-color: #b8c6d1;
-  border-color: #b8c6d1;
+  background-color: #5a7285;
+  border-color: #5a7285;
 }
 .btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active, .show > .btn-secondary.dropdown-toggle {
   color: #fff;
@@ -2742,25 +2742,25 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-secondary {
-  color: #b8c6d1;
-  border-color: #b8c6d1;
+  color: #5a7285;
+  border-color: #5a7285;
 }
 .btn-outline-secondary:hover {
   color: #fff;
-  background-color: #b8c6d1;
-  border-color: #b8c6d1;
+  background-color: #5a7285;
+  border-color: #5a7285;
 }
 .btn-outline-secondary:focus, .btn-outline-secondary.focus {
   box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
 }
 .btn-outline-secondary.disabled, .btn-outline-secondary:disabled {
-  color: #b8c6d1;
+  color: #5a7285;
   background-color: transparent;
 }
 .btn-outline-secondary:not(:disabled):not(.disabled):active, .btn-outline-secondary:not(:disabled):not(.disabled).active, .show > .btn-outline-secondary.dropdown-toggle {
   color: #fff;
-  background-color: #b8c6d1;
-  border-color: #b8c6d1;
+  background-color: #5a7285;
+  border-color: #5a7285;
 }
 .btn-outline-secondary:not(:disabled):not(.disabled):active:focus, .btn-outline-secondary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-secondary.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
@@ -2929,7 +2929,7 @@ fieldset:disabled a.btn {
   text-decoration: underline;
 }
 .btn-link:disabled, .btn-link.disabled {
-  color: #b8c6d1;
+  color: #5a7285;
   pointer-events: none;
 }
 
@@ -3198,7 +3198,7 @@ input[type=button].btn-block {
   background-color: #bd5d38;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
-  color: #b8c6d1;
+  color: #5a7285;
   pointer-events: none;
   background-color: transparent;
 }
@@ -3212,7 +3212,7 @@ input[type=button].btn-block {
   padding: 0.5rem 1.5rem;
   margin-bottom: 0;
   font-size: 0.875rem;
-  color: #b8c6d1;
+  color: #5a7285;
   white-space: nowrap;
 }
 
@@ -3536,7 +3536,7 @@ input[type=button].btn-block {
   border-color: #ebc9bc;
 }
 .custom-control-input[disabled] ~ .custom-control-label, .custom-control-input:disabled ~ .custom-control-label {
-  color: #b8c6d1;
+  color: #5a7285;
 }
 .custom-control-input[disabled] ~ .custom-control-label::before, .custom-control-input:disabled ~ .custom-control-label::before {
   background-color: #e9ecef;
@@ -3663,7 +3663,7 @@ input[type=button].btn-block {
   background-image: none;
 }
 .custom-select:disabled {
-  color: #b8c6d1;
+  color: #5a7285;
   background-color: #e9ecef;
 }
 .custom-select::-ms-expand {
@@ -3920,7 +3920,7 @@ input[type=button].btn-block {
   text-decoration: none;
 }
 .nav-link.disabled {
-  color: #b8c6d1;
+  color: #5a7285;
   pointer-events: none;
   cursor: default;
 }
@@ -3940,7 +3940,7 @@ input[type=button].btn-block {
   border-color: #e9ecef #e9ecef #dee2e6;
 }
 .nav-tabs .nav-link.disabled {
-  color: #b8c6d1;
+  color: #5a7285;
   background-color: transparent;
   border-color: transparent;
 }
@@ -4580,7 +4580,7 @@ input[type=button].btn-block {
 .breadcrumb-item + .breadcrumb-item::before {
   display: inline-block;
   padding-right: 0.5rem;
-  color: #b8c6d1;
+  color: #5a7285;
   content: "/";
 }
 .breadcrumb-item + .breadcrumb-item:hover::before {
@@ -4590,7 +4590,7 @@ input[type=button].btn-block {
   text-decoration: none;
 }
 .breadcrumb-item.active {
-  color: #b8c6d1;
+  color: #5a7285;
 }
 
 .pagination {
@@ -4639,7 +4639,7 @@ input[type=button].btn-block {
   border-color: #bd5d38;
 }
 .page-item.disabled .page-link {
-  color: #b8c6d1;
+  color: #5a7285;
   pointer-events: none;
   cursor: auto;
   background-color: #fff;
@@ -4725,7 +4725,7 @@ a.badge-primary:focus, a.badge-primary.focus {
 
 .badge-secondary {
   color: #fff;
-  background-color: #b8c6d1;
+  background-color: #5a7285;
 }
 a.badge-secondary:hover, a.badge-secondary:focus {
   color: #fff;
@@ -5064,7 +5064,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   border-bottom-left-radius: inherit;
 }
 .list-group-item.disabled, .list-group-item:disabled {
-  color: #b8c6d1;
+  color: #5a7285;
   pointer-events: none;
   background-color: #fff;
 }
@@ -5381,7 +5381,7 @@ a.close.disabled {
   display: flex;
   align-items: center;
   padding: 0.25rem 0.75rem;
-  color: #b8c6d1;
+  color: #5a7285;
   background-color: rgba(255, 255, 255, 0.85);
   background-clip: padding-box;
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
@@ -6113,7 +6113,7 @@ button.bg-primary:focus {
 }
 
 .bg-secondary {
-  background-color: #b8c6d1 !important;
+  background-color: #5a7285 !important;
 }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
@@ -6235,7 +6235,7 @@ button.bg-dark:focus {
 }
 
 .border-secondary {
-  border-color: #b8c6d1 !important;
+  border-color: #5a7285 !important;
 }
 
 .border-success {
@@ -9813,7 +9813,7 @@ a.text-primary:hover, a.text-primary:focus {
 }
 
 .text-secondary {
-  color: #b8c6d1 !important;
+  color: #5a7285 !important;
 }
 
 a.text-secondary:hover, a.text-secondary:focus {
@@ -9873,7 +9873,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .text-muted {
-  color: #b8c6d1 !important;
+  color: #5a7285 !important;
 }
 
 .text-black-50 {
@@ -10008,7 +10008,7 @@ h3 {
 }
 body {
   padding-top: 3.375rem;
-  color: #b8c6d1;
+  color: #5a7285;
 }
 
 @media (min-width: 992px) {
