--- a/css/styles_purple.css
+++ b/css/styles_purple.css
@@ -27,8 +27,8 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #204e7a;
-  --secondary: #57385c;
+  --primary: #57385c;
+  --secondary: #a75265;
   --success: #28a745;
   --info: #17a2b8;
   --warning: #ffc107;
@@ -162,7 +162,7 @@ sup {
 }
 
 a {
-  color: #204e7a;
+  color: #57385c;
   text-decoration: none;
   background-color: transparent;
 }
@@ -216,7 +216,7 @@ table {
 caption {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-  color: #57385c;
+  color: #a75265;
   text-align: left;
   caption-side: bottom;
 }
@@ -471,7 +471,7 @@ mark,
 .blockquote-footer {
   display: block;
   font-size: 80%;
-  color: #57385c;
+  color: #a75265;
 }
 .blockquote-footer::before {
   content: "— ";
@@ -502,7 +502,7 @@ mark,
 
 .figure-caption {
   font-size: 90%;
-  color: #57385c;
+  color: #a75265;
 }
 
 code {
@@ -2030,23 +2030,23 @@ pre code {
   box-shadow: 0 0 0 0.2rem rgba(189, 93, 56, 0.25);
 }
 .form-control::-webkit-input-placeholder {
-  color: #57385c;
+  color: #a75265;
   opacity: 1;
 }
 .form-control::-moz-placeholder {
-  color: #57385c;
+  color: #a75265;
   opacity: 1;
 }
 .form-control:-ms-input-placeholder {
-  color: #57385c;
+  color: #a75265;
   opacity: 1;
 }
 .form-control::-ms-input-placeholder {
-  color: #57385c;
+  color: #a75265;
   opacity: 1;
 }
 .form-control::placeholder {
-  color: #57385c;
+  color: #a75265;
   opacity: 1;
 }
 .form-control:disabled, .form-control[readonly] {
@@ -2170,7 +2170,7 @@ textarea.form-control {
   margin-left: -1.25rem;
 }
 .form-check-input[disabled] ~ .form-check-label, .form-check-input:disabled ~ .form-check-label {
-  color: #57385c;
+  color: #a75265;
 }
 
 .form-check-label {
@@ -2475,8 +2475,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #204e7a;
-  border-color: #204e7a;
+  background-color: #57385c;
+  border-color: #57385c;
 }
 .btn-primary:hover {
   color: #fff;
@@ -2491,8 +2491,8 @@ fieldset:disabled a.btn {
 }
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #204e7a;
-  border-color: #204e7a;
+  background-color: #57385c;
+  border-color: #57385c;
 }
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
@@ -2505,8 +2505,8 @@ fieldset:disabled a.btn {
 
 .btn-secondary {
   color: #fff;
-  background-color: #57385c;
-  border-color: #57385c;
+  background-color: #a75265;
+  border-color: #a75265;
 }
 .btn-secondary:hover {
   color: #fff;
@@ -2521,8 +2521,8 @@ fieldset:disabled a.btn {
 }
 .btn-secondary.disabled, .btn-secondary:disabled {
   color: #fff;
-  background-color: #57385c;
-  border-color: #57385c;
+  background-color: #a75265;
+  border-color: #a75265;
 }
 .btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active, .show > .btn-secondary.dropdown-toggle {
   color: #fff;
@@ -2714,50 +2714,50 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #204e7a;
-  border-color: #204e7a;
+  color: #57385c;
+  border-color: #57385c;
 }
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #204e7a;
-  border-color: #204e7a;
+  background-color: #57385c;
+  border-color: #57385c;
 }
 .btn-outline-primary:focus, .btn-outline-primary.focus {
   box-shadow: 0 0 0 0.2rem rgba(189, 93, 56, 0.5);
 }
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #204e7a;
+  color: #57385c;
   background-color: transparent;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active, .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #204e7a;
-  border-color: #204e7a;
+  background-color: #57385c;
+  border-color: #57385c;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-primary.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(189, 93, 56, 0.5);
 }
 
 .btn-outline-secondary {
-  color: #57385c;
-  border-color: #57385c;
+  color: #a75265;
+  border-color: #a75265;
 }
 .btn-outline-secondary:hover {
   color: #fff;
-  background-color: #57385c;
-  border-color: #57385c;
+  background-color: #a75265;
+  border-color: #a75265;
 }
 .btn-outline-secondary:focus, .btn-outline-secondary.focus {
   box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
 }
 .btn-outline-secondary.disabled, .btn-outline-secondary:disabled {
-  color: #57385c;
+  color: #a75265;
   background-color: transparent;
 }
 .btn-outline-secondary:not(:disabled):not(.disabled):active, .btn-outline-secondary:not(:disabled):not(.disabled).active, .show > .btn-outline-secondary.dropdown-toggle {
   color: #fff;
-  background-color: #57385c;
-  border-color: #57385c;
+  background-color: #a75265;
+  border-color: #a75265;
 }
 .btn-outline-secondary:not(:disabled):not(.disabled):active:focus, .btn-outline-secondary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-secondary.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
@@ -2915,7 +2915,7 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #204e7a;
+  color: #57385c;
   text-decoration: none;
 }
 .btn-link:hover {
@@ -2926,7 +2926,7 @@ fieldset:disabled a.btn {
   text-decoration: underline;
 }
 .btn-link:disabled, .btn-link.disabled {
-  color: #57385c;
+  color: #a75265;
   pointer-events: none;
 }
 
@@ -3192,10 +3192,10 @@ input[type=button].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #204e7a;
+  background-color: #57385c;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
-  color: #57385c;
+  color: #a75265;
   pointer-events: none;
   background-color: transparent;
 }
@@ -3209,7 +3209,7 @@ input[type=button].btn-block {
   padding: 0.5rem 1.5rem;
   margin-bottom: 0;
   font-size: 0.875rem;
-  color: #57385c;
+  color: #a75265;
   white-space: nowrap;
 }
 
@@ -3518,8 +3518,8 @@ input[type=button].btn-block {
 }
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #204e7a;
-  background-color: #204e7a;
+  border-color: #57385c;
+  background-color: #57385c;
 }
 .custom-control-input:focus ~ .custom-control-label::before {
   box-shadow: 0 0 0 0.2rem rgba(189, 93, 56, 0.25);
@@ -3533,7 +3533,7 @@ input[type=button].btn-block {
   border-color: #ebc9bc;
 }
 .custom-control-input[disabled] ~ .custom-control-label, .custom-control-input:disabled ~ .custom-control-label {
-  color: #57385c;
+  color: #a75265;
 }
 .custom-control-input[disabled] ~ .custom-control-label::before, .custom-control-input:disabled ~ .custom-control-label::before {
   background-color: #e9ecef;
@@ -3574,8 +3574,8 @@ input[type=button].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e");
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #204e7a;
-  background-color: #204e7a;
+  border-color: #57385c;
+  background-color: #57385c;
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e");
@@ -3660,7 +3660,7 @@ input[type=button].btn-block {
   background-image: none;
 }
 .custom-select:disabled {
-  color: #57385c;
+  color: #a75265;
   background-color: #e9ecef;
 }
 .custom-select::-ms-expand {
@@ -3777,7 +3777,7 @@ input[type=button].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #204e7a;
+  background-color: #57385c;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3806,7 +3806,7 @@ input[type=button].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #204e7a;
+  background-color: #57385c;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3838,7 +3838,7 @@ input[type=button].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #204e7a;
+  background-color: #57385c;
   border: 0;
   border-radius: 1rem;
   -ms-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3917,7 +3917,7 @@ input[type=button].btn-block {
   text-decoration: none;
 }
 .nav-link.disabled {
-  color: #57385c;
+  color: #a75265;
   pointer-events: none;
   cursor: default;
 }
@@ -3937,7 +3937,7 @@ input[type=button].btn-block {
   border-color: #e9ecef #e9ecef #dee2e6;
 }
 .nav-tabs .nav-link.disabled {
-  color: #57385c;
+  color: #a75265;
   background-color: transparent;
   border-color: transparent;
 }
@@ -3959,7 +3959,7 @@ input[type=button].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #204e7a;
+  background-color: #57385c;
 }
 
 .nav-fill .nav-item {
@@ -4577,7 +4577,7 @@ input[type=button].btn-block {
 .breadcrumb-item + .breadcrumb-item::before {
   display: inline-block;
   padding-right: 0.5rem;
-  color: #57385c;
+  color: #a75265;
   content: "/";
 }
 .breadcrumb-item + .breadcrumb-item:hover::before {
@@ -4587,7 +4587,7 @@ input[type=button].btn-block {
   text-decoration: none;
 }
 .breadcrumb-item.active {
-  color: #57385c;
+  color: #a75265;
 }
 
 .pagination {
@@ -4603,7 +4603,7 @@ input[type=button].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #204e7a;
+  color: #57385c;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
@@ -4632,11 +4632,11 @@ input[type=button].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #204e7a;
-  border-color: #204e7a;
+  background-color: #57385c;
+  border-color: #57385c;
 }
 .page-item.disabled .page-link {
-  color: #57385c;
+  color: #a75265;
   pointer-events: none;
   cursor: auto;
   background-color: #fff;
@@ -4709,7 +4709,7 @@ a.badge:hover, a.badge:focus {
 
 .badge-primary {
   color: #fff;
-  background-color: #204e7a;
+  background-color: #57385c;
 }
 a.badge-primary:hover, a.badge-primary:focus {
   color: #fff;
@@ -4722,7 +4722,7 @@ a.badge-primary:focus, a.badge-primary.focus {
 
 .badge-secondary {
   color: #fff;
-  background-color: #57385c;
+  background-color: #a75265;
 }
 a.badge-secondary:hover, a.badge-secondary:focus {
   color: #fff;
@@ -4987,7 +4987,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #204e7a;
+  background-color: #57385c;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -5061,15 +5061,15 @@ a.badge-dark:focus, a.badge-dark.focus {
   border-bottom-left-radius: inherit;
 }
 .list-group-item.disabled, .list-group-item:disabled {
-  color: #57385c;
+  color: #a75265;
   pointer-events: none;
   background-color: #fff;
 }
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #204e7a;
-  border-color: #204e7a;
+  background-color: #57385c;
+  border-color: #57385c;
 }
 .list-group-item + .list-group-item {
   border-top-width: 0;
@@ -5378,7 +5378,7 @@ a.close.disabled {
   display: flex;
   align-items: center;
   padding: 0.25rem 0.75rem;
-  color: #57385c;
+  color: #a75265;
   background-color: rgba(255, 255, 255, 0.85);
   background-clip: padding-box;
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
@@ -6100,7 +6100,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #204e7a !important;
+  background-color: #57385c !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -6110,7 +6110,7 @@ button.bg-primary:focus {
 }
 
 .bg-secondary {
-  background-color: #57385c !important;
+  background-color: #a75265 !important;
 }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
@@ -6228,11 +6228,11 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #204e7a !important;
+  border-color: #57385c !important;
 }
 
 .border-secondary {
-  border-color: #57385c !important;
+  border-color: #a75265 !important;
 }
 
 .border-success {
@@ -9802,7 +9802,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #204e7a !important;
+  color: #57385c !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
@@ -9810,7 +9810,7 @@ a.text-primary:hover, a.text-primary:focus {
 }
 
 .text-secondary {
-  color: #57385c !important;
+  color: #a75265 !important;
 }
 
 a.text-secondary:hover, a.text-secondary:focus {
@@ -9870,7 +9870,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .text-muted {
-  color: #57385c !important;
+  color: #a75265 !important;
 }
 
 .text-black-50 {
@@ -10005,7 +10005,7 @@ h3 {
 }
 body {
   padding-top: 3.375rem;
-  color: #57385c;
+  color: #a75265;
 }
 
 @media (min-width: 992px) {
@@ -10103,7 +10103,7 @@ p.lead {
   margin-right: 0;
 }
 .social-icons .social-icon:hover {
-  background-color: #204e7a;
+  background-color: #57385c;
 }
 
 .dev-icons {
