--- a/css/styles_dark-purple2.css
+++ b/css/styles_dark-purple2.css
@@ -11,11 +11,9 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 :root {
-  --white: #fffdfa;
-  --light-blue: #b8c6d1;
-  --dark-blue: #5a7285;
-  --light-brown: #d1c7b8;
-  --dark-brown: #857967;
+  --red-orange: #ec7263;
+  --red-purple: #a75265;
+  --dark-purple: #57385c;
 
   --blue: #007bff;
   --indigo: #6610f2;
@@ -30,8 +28,8 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #5a7285;
-  --secondary: #857967;
+  --primary: #57385c;
+  --secondary: #ec7263;
   --success: #28a745;
   --info: #17a2b8;
   --warning: #ffc107;
@@ -165,7 +163,7 @@ sup {
 }
 
 a {
-  color: #5a7285;
+  color: #57385c;
   text-decoration: none;
   background-color: transparent;
 }
@@ -219,7 +217,7 @@ table {
 caption {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-  color: #857967;
+  color: #ec7263;
   text-align: left;
   caption-side: bottom;
 }
@@ -474,7 +472,7 @@ mark,
 .blockquote-footer {
   display: block;
   font-size: 80%;
-  color: #857967;
+  color: #ec7263;
 }
 .blockquote-footer::before {
   content: "— ";
@@ -505,7 +503,7 @@ mark,
 
 .figure-caption {
   font-size: 90%;
-  color: #857967;
+  color: #ec7263;
 }
 
 code {
@@ -2033,23 +2031,23 @@ pre code {
   box-shadow: 0 0 0 0.2rem rgba(189, 93, 56, 0.25);
 }
 .form-control::-webkit-input-placeholder {
-  color: #857967;
+  color: #ec7263;
   opacity: 1;
 }
 .form-control::-moz-placeholder {
-  color: #857967;
+  color: #ec7263;
   opacity: 1;
 }
 .form-control:-ms-input-placeholder {
-  color: #857967;
+  color: #ec7263;
   opacity: 1;
 }
 .form-control::-ms-input-placeholder {
-  color: #857967;
+  color: #ec7263;
   opacity: 1;
 }
 .form-control::placeholder {
-  color: #857967;
+  color: #ec7263;
   opacity: 1;
 }
 .form-control:disabled, .form-control[readonly] {
@@ -2173,7 +2171,7 @@ textarea.form-control {
   margin-left: -1.25rem;
 }
 .form-check-input[disabled] ~ .form-check-label, .form-check-input:disabled ~ .form-check-label {
-  color: #857967;
+  color: #ec7263;
 }
 
 .form-check-label {
@@ -2478,8 +2476,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #5a7285;
-  border-color: #5a7285;
+  background-color: #57385c;
+  border-color: #57385c;
 }
 .btn-primary:hover {
   color: #fff;
@@ -2494,8 +2492,8 @@ fieldset:disabled a.btn {
 }
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #5a7285;
-  border-color: #5a7285;
+  background-color: #57385c;
+  border-color: #57385c;
 }
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
@@ -2508,8 +2506,8 @@ fieldset:disabled a.btn {
 
 .btn-secondary {
   color: #fff;
-  background-color: #857967;
-  border-color: #857967;
+  background-color: #ec7263;
+  border-color: #ec7263;
 }
 .btn-secondary:hover {
   color: #fff;
@@ -2524,8 +2522,8 @@ fieldset:disabled a.btn {
 }
 .btn-secondary.disabled, .btn-secondary:disabled {
   color: #fff;
-  background-color: #857967;
-  border-color: #857967;
+  background-color: #ec7263;
+  border-color: #ec7263;
 }
 .btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active, .show > .btn-secondary.dropdown-toggle {
   color: #fff;
@@ -2717,50 +2715,50 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #5a7285;
-  border-color: #5a7285;
+  color: #57385c;
+  border-color: #57385c;
 }
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #5a7285;
-  border-color: #5a7285;
+  background-color: #57385c;
+  border-color: #57385c;
 }
 .btn-outline-primary:focus, .btn-outline-primary.focus {
   box-shadow: 0 0 0 0.2rem rgba(189, 93, 56, 0.5);
 }
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #5a7285;
+  color: #57385c;
   background-color: transparent;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active, .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #5a7285;
-  border-color: #5a7285;
+  background-color: #57385c;
+  border-color: #57385c;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-primary.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(189, 93, 56, 0.5);
 }
 
 .btn-outline-secondary {
-  color: #857967;
-  border-color: #857967;
+  color: #ec7263;
+  border-color: #ec7263;
 }
 .btn-outline-secondary:hover {
   color: #fff;
-  background-color: #857967;
-  border-color: #857967;
+  background-color: #ec7263;
+  border-color: #ec7263;
 }
 .btn-outline-secondary:focus, .btn-outline-secondary.focus {
   box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
 }
 .btn-outline-secondary.disabled, .btn-outline-secondary:disabled {
-  color: #857967;
+  color: #ec7263;
   background-color: transparent;
 }
 .btn-outline-secondary:not(:disabled):not(.disabled):active, .btn-outline-secondary:not(:disabled):not(.disabled).active, .show > .btn-outline-secondary.dropdown-toggle {
   color: #fff;
-  background-color: #857967;
-  border-color: #857967;
+  background-color: #ec7263;
+  border-color: #ec7263;
 }
 .btn-outline-secondary:not(:disabled):not(.disabled):active:focus, .btn-outline-secondary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-secondary.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(108, 117, 125, 0.5);
@@ -2918,7 +2916,7 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #5a7285;
+  color: #57385c;
   text-decoration: none;
 }
 .btn-link:hover {
@@ -2929,7 +2927,7 @@ fieldset:disabled a.btn {
   text-decoration: underline;
 }
 .btn-link:disabled, .btn-link.disabled {
-  color: #857967;
+  color: #ec7263;
   pointer-events: none;
 }
 
@@ -3195,10 +3193,10 @@ input[type=button].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #5a7285;
+  background-color: #57385c;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
-  color: #857967;
+  color: #ec7263;
   pointer-events: none;
   background-color: transparent;
 }
@@ -3212,7 +3210,7 @@ input[type=button].btn-block {
   padding: 0.5rem 1.5rem;
   margin-bottom: 0;
   font-size: 0.875rem;
-  color: #857967;
+  color: #ec7263;
   white-space: nowrap;
 }
 
@@ -3521,8 +3519,8 @@ input[type=button].btn-block {
 }
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #5a7285;
-  background-color: #5a7285;
+  border-color: #57385c;
+  background-color: #57385c;
 }
 .custom-control-input:focus ~ .custom-control-label::before {
   box-shadow: 0 0 0 0.2rem rgba(189, 93, 56, 0.25);
@@ -3536,7 +3534,7 @@ input[type=button].btn-block {
   border-color: #ebc9bc;
 }
 .custom-control-input[disabled] ~ .custom-control-label, .custom-control-input:disabled ~ .custom-control-label {
-  color: #857967;
+  color: #ec7263;
 }
 .custom-control-input[disabled] ~ .custom-control-label::before, .custom-control-input:disabled ~ .custom-control-label::before {
   background-color: #e9ecef;
@@ -3577,8 +3575,8 @@ input[type=button].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e");
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #5a7285;
-  background-color: #5a7285;
+  border-color: #57385c;
+  background-color: #57385c;
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e");
@@ -3663,7 +3661,7 @@ input[type=button].btn-block {
   background-image: none;
 }
 .custom-select:disabled {
-  color: #857967;
+  color: #ec7263;
   background-color: #e9ecef;
 }
 .custom-select::-ms-expand {
@@ -3780,7 +3778,7 @@ input[type=button].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #5a7285;
+  background-color: #57385c;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3809,7 +3807,7 @@ input[type=button].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #5a7285;
+  background-color: #57385c;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3841,7 +3839,7 @@ input[type=button].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #5a7285;
+  background-color: #57385c;
   border: 0;
   border-radius: 1rem;
   -ms-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3920,7 +3918,7 @@ input[type=button].btn-block {
   text-decoration: none;
 }
 .nav-link.disabled {
-  color: #857967;
+  color: #ec7263;
   pointer-events: none;
   cursor: default;
 }
@@ -3940,7 +3938,7 @@ input[type=button].btn-block {
   border-color: #e9ecef #e9ecef #dee2e6;
 }
 .nav-tabs .nav-link.disabled {
-  color: #857967;
+  color: #ec7263;
   background-color: transparent;
   border-color: transparent;
 }
@@ -3962,7 +3960,7 @@ input[type=button].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #5a7285;
+  background-color: #57385c;
 }
 
 .nav-fill .nav-item {
@@ -4580,7 +4578,7 @@ input[type=button].btn-block {
 .breadcrumb-item + .breadcrumb-item::before {
   display: inline-block;
   padding-right: 0.5rem;
-  color: #857967;
+  color: #ec7263;
   content: "/";
 }
 .breadcrumb-item + .breadcrumb-item:hover::before {
@@ -4590,7 +4588,7 @@ input[type=button].btn-block {
   text-decoration: none;
 }
 .breadcrumb-item.active {
-  color: #857967;
+  color: #ec7263;
 }
 
 .pagination {
@@ -4606,7 +4604,7 @@ input[type=button].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #5a7285;
+  color: #57385c;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
@@ -4635,11 +4633,11 @@ input[type=button].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #5a7285;
-  border-color: #5a7285;
+  background-color: #57385c;
+  border-color: #57385c;
 }
 .page-item.disabled .page-link {
-  color: #857967;
+  color: #ec7263;
   pointer-events: none;
   cursor: auto;
   background-color: #fff;
@@ -4712,7 +4710,7 @@ a.badge:hover, a.badge:focus {
 
 .badge-primary {
   color: #fff;
-  background-color: #5a7285;
+  background-color: #57385c;
 }
 a.badge-primary:hover, a.badge-primary:focus {
   color: #fff;
@@ -4725,7 +4723,7 @@ a.badge-primary:focus, a.badge-primary.focus {
 
 .badge-secondary {
   color: #fff;
-  background-color: #857967;
+  background-color: #ec7263;
 }
 a.badge-secondary:hover, a.badge-secondary:focus {
   color: #fff;
@@ -4990,7 +4988,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #5a7285;
+  background-color: #57385c;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -5064,15 +5062,15 @@ a.badge-dark:focus, a.badge-dark.focus {
   border-bottom-left-radius: inherit;
 }
 .list-group-item.disabled, .list-group-item:disabled {
-  color: #857967;
+  color: #ec7263;
   pointer-events: none;
   background-color: #fff;
 }
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #5a7285;
-  border-color: #5a7285;
+  background-color: #57385c;
+  border-color: #57385c;
 }
 .list-group-item + .list-group-item {
   border-top-width: 0;
@@ -5381,7 +5379,7 @@ a.close.disabled {
   display: flex;
   align-items: center;
   padding: 0.25rem 0.75rem;
-  color: #857967;
+  color: #ec7263;
   background-color: rgba(255, 255, 255, 0.85);
   background-clip: padding-box;
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
@@ -6103,7 +6101,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #5a7285 !important;
+  background-color: #57385c !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -6113,7 +6111,7 @@ button.bg-primary:focus {
 }
 
 .bg-secondary {
-  background-color: #857967 !important;
+  background-color: #ec7263 !important;
 }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
@@ -6231,11 +6229,11 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #5a7285 !important;
+  border-color: #57385c !important;
 }
 
 .border-secondary {
-  border-color: #857967 !important;
+  border-color: #ec7263 !important;
 }
 
 .border-success {
@@ -9805,7 +9803,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #5a7285 !important;
+  color: #57385c !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
@@ -9813,7 +9811,7 @@ a.text-primary:hover, a.text-primary:focus {
 }
 
 .text-secondary {
-  color: #857967 !important;
+  color: #ec7263 !important;
 }
 
 a.text-secondary:hover, a.text-secondary:focus {
@@ -9873,7 +9871,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .text-muted {
-  color: #857967 !important;
+  color: #ec7263 !important;
 }
 
 .text-black-50 {
@@ -10008,7 +10006,7 @@ h3 {
 }
 body {
   padding-top: 3.375rem;
-  color: #857967;
+  color: #ec7263;
 }
 
 @media (min-width: 992px) {
@@ -10106,7 +10104,7 @@ p.lead {
   margin-right: 0;
 }
 .social-icons .social-icon:hover {
-  background-color: #5a7285;
+  background-color: #57385c;
 }
 
 .dev-icons {
